Subdivision Surface modifier, "Optimal Display" not working #58609

Closed
opened 2018-12-03 11:05:56 +01:00 by Christer Sveen · 10 comments

System Information
Operating system: Windows 10 Enterprise.
Graphics card: NVidia GeForce GTX Titan X.

Blender Version
Broken: 2.80 Beta.

Short description of error
When adding the Subdivision Surface Modifier to an object, the option labelled "Optimal Display" does not work. Essential function to have when working with subdivision models.

Exact steps for others to reproduce the error
Add a cube, then add a Subdivision Surface Modifier to it, increase the subdivisions and turn on "Optimal Display".

**System Information** Operating system: Windows 10 Enterprise. Graphics card: NVidia GeForce GTX Titan X. **Blender Version** Broken: 2.80 Beta. **Short description of error** When adding the Subdivision Surface Modifier to an object, the option labelled "Optimal Display" does not work. Essential function to have when working with subdivision models. **Exact steps for others to reproduce the error** Add a cube, then add a Subdivision Surface Modifier to it, increase the subdivisions and turn on "Optimal Display".
Author

Added subscriber: @CSveen-2

Added subscriber: @CSveen-2

Added subscriber: @brecht

Added subscriber: @brecht
Sergey Sharybin was assigned by Brecht Van Lommel 2018-12-03 11:33:05 +01:00

For me this option is always on. Is that the bug, or are you seeing all wires somehow?

For me this option is always on. Is that the bug, or are you seeing all wires somehow?
Author

Maybe this comparison between 2.79 and 2.80 illustrates the issue (see attached image): To the left, with the "Optimal Display" turned on, we see lowpoly edges/geometry over the subdivided surface, whereas in 2.80 Beta there seems to be no difference between turning the setting on or off. The option as seen in the 2.79 example would be great to also have in 2.80.

B279vs280_optimalDisplay_comparison.jpg

Maybe this comparison between 2.79 and 2.80 illustrates the issue (see attached image): To the left, with the "Optimal Display" turned on, we see lowpoly edges/geometry over the subdivided surface, whereas in 2.80 Beta there seems to be no difference between turning the setting on or off. The option as seen in the 2.79 example would be great to also have in 2.80. ![B279vs280_optimalDisplay_comparison.jpg](https://archive.blender.org/developer/F5799732/B279vs280_optimalDisplay_comparison.jpg)

Ok, in object mode with wireframe display mode or overlay, I was thinking about edit mode.

Ok, in object mode with wireframe display mode or overlay, I was thinking about edit mode.
Author

Ah, yes, it is looking fine in edit mode, but not in object mode unfortunately. Maybe this is by design, but I thought it was an excellent way to declutter heavy subdivided scenes and if possible to make it also work in object mode (since the checkbox is there but nothing changes visually), that would be very nice.

Ah, yes, it is looking fine in edit mode, but not in object mode unfortunately. Maybe this is by design, but I thought it was an excellent way to declutter heavy subdivided scenes and if possible to make it also work in object mode (since the checkbox is there but nothing changes visually), that would be very nice.
Sergey Sharybin removed their assignment 2018-12-03 17:06:04 +01:00
Clément Foucault was assigned by Sergey Sharybin 2018-12-03 17:06:04 +01:00

Added subscribers: @fclem, @Sergey

Added subscribers: @fclem, @Sergey

I've properly set ME_EDGERENDER flags now, but it is ignored in the draw manager. So guess rest goes to @fclem.

I've properly set `ME_EDGERENDER` flags now, but it is ignored in the draw manager. So guess rest goes to @fclem.

This issue was referenced by 7e5f31be41

This issue was referenced by 7e5f31be418d75fa0aa5116a2720a6b7e988f9e4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58609
No description provided.