Subdiv: Set edge render flags according to Optimal Display

This is a part of T58609, but work is still needed to properly
support this flag in the draw manager.